[package]
name = "filemap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
memmap2 = "0.5"
tempdir = "0.3"
tokio = { version = "1.18", features = ["full"] }